--- a/UcasProjectManagement/UcasProWindowsForm/Forms/EmployeeForm/FrmContratsManage.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/EmployeeForm/FrmContratsManage.resx
@@ -120,62 +120,62 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABQlJREFUSEu9lW1sU1UYxyufCX7TxJCYqF8UTfzgF0gmITNDRFSUEWAiifEF/SIJ
-        RoVgUQmYGKLLKMhGgACDbey92ygSGC0do9u6ru3W97Ws7fpye2/X7q29fTn9+9y7jopFE030n/xybu49
-        5/+c8zz3nKP4X1UoFPYyxvqKqP8BGqIHQHXRqlxkXpXJZCLU6V8rl8t5qHmmaFlSvlDYRx99+cJSR1Yo
-        gN4RQJ5J0PPfQX2loVJ/Wsnxom1JImP1y+Zd7jiqOx34oMeFmm4Xtnc4sbXNji2tdrxx1VbG6y02VFyy
-        oM0pyOPTjLUUbUsSc0zlC0zTXABnPI0OCqL2zKCb6HTF0U60OuK46hDKaCEuT/BwCGnQQpDOsstF25JS
-        FGByaprlKB02PkVmAjqKxrKJXUCzjcflR9BInLfG5HFSFhazrLFoW9JshqncFEBaYifNXkrPp5pJfHRt
-        Ent63KhRu7Gjy4VtlK4/8267ExspTe2upRQtpB8VQGQqmzfIkiJDLJWHN5mBj5DayYQo45GYKccttYkM
-        ZtIF8DSWPM4WbUuKp5hqnAKQPy07hneoqDu6nKimGUrPm6mYG1smUHmlnPWN46hqdqAvJMKSBNRTrP8w
-        sKJovaQYBTB5Aiy6yGjWWRgjKZlRYiSyiGFiSCL8MAbCGs/h5E0zDta3wJ4G2oLAOS+rL1ovKbSQUxnd
-        ASbQMjXeJA7rAzh6N4gjhFIfxCFdAAe0fnzVP/UQP9wJoGGMQ40uCMVuJfbXnkGY6tCfAE6Z5y4dH+Rr
-        HgQYdgUYt1hAn3cW35Pp0cGQHOA7ev6WjA5qA/iGgkgc0PmhJHZS+p5utGPVbwmsUAtQfHgMypPnQItA
-        90Qwf9GWui4H8M/mVANOP/PO5mDlRWgDC9AG56ELLuC2f16mn7g1NYebxCB9M4bm8fkQj1XqMB7vmsZz
-        /Ums1MxAsUuJQ3UNMAgFpS5eWCcH8CVyKr3Nz0LzDGfMVOR2O7ZTkd+jIr9FO3gT/YZVzRN47YoV6684
-        8NJ5B9a0ebCyO4QneiN4pV/As9fCWNFLq2gYx4s7938tGy9rMpFR3R6/z+xCFtZYBoZQCvdkFjEoMb3E
-        SDSDoSke2zXjULRyeEoTReXdBF6+xUNB1V3V5scXWn9P0bYkR1wKMMUmkwxnLTx20Rm0p2cSu9Ue7Oh0
-        ySt5u82JDW0B/NzZAfNAHSoH41hryKFCT2lpDeCxJi+OGTmIIrtQtC3JJgWw3GfjfBYa3xx+HYuhwczj
-        9BiPU6YYVKMcTpgEKAeiaLykpAPrBOL8GPZY5qFoF/Bk5xTqaGLBRJY2XbZ8J1sFCmD2sTFKT693TjaU
-        jE+aONQZo6gdjuCELYVDTTp8XL0BMcNPQKgZJuMF+ov0WNPoxg1PEq6ZPMxcuvywM3Fi/SiXwTifJ9OY
-        vIN3drlRTYXeSmfNm1TkLddjeOH9L7F69fPYtvlVmJs+gUf7C470arG+yYNaYwwTQg7maLr8uLYL4j4j
-        J/r0wTSGwxkYqZhSQeU2IsKxCGidYaxbW4GKyk34TFmLLoMF+mged2hnWWhyw9RPR+MtXLr8wpFkF9JV
-        A9PpiCEsysZ/RArQddeKH09fxA0nBxsdCQbarfeiBYxyWZgowD0aNxRe8LiS6fIrc1lWPrt3KJLqkzCE
-        U+plRrisut/DqU1CSn2fLnnbPFOPRLMPvhsiomY4lOqhn+WvL/3/RgrF7xLgwtfhYU8NAAAAAElFTkSu
-        QmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUJSURBVEhLvZVtbFNVGMcrnwl+08SQmKhfFE384BdIJiEz
+        U0RUlBFgIonxBf0iCUaFYFEJmBiiyyjIRoAAg22s27puo0hgtOyt3bquL+vbus1tpS+393bt3npvX07/
+        Pveuo2LRRBN9kl/Ozb3n/P/nPM8956j+18jn8/sYY10F9P8AA9EBoLIgVRokXpFOpyPU6V9HNpsNUPNU
+        QbIYuXx+P32czOWXO7J8HvSOAHJMhp7/DuorD5X700pOFGSLITFWuyKuG4ujss2L9zv8qGr3Y0erD9u0
+        Hmxt9uD1a+4SXmtyo+yyA1qfoIwXGWsqyBZDyjKN0+OjuQC+uIhWMtEHZtFOtPnjaCGavXFc8wolNBFX
+        Rnl4BRG0EIgZdqUgW4wUGdhHfSxL6XDzKRIT0FoQVkQ8AhrdPK48hHrigjOmjJOzsJRh9QXZYsylmcZG
+        BvIS22j2cno+MYzjw+vj2Nsxhir9GHbq/NhO6foz77T48CqlqcW/nKJF8WEGEtNYHF6WlBhiqRwmkmlM
+        EnI7npAUAjKzpYzJbSKNWTEPnsaSxrmCbDHiKaYZIAPSp2XH8DYVdafOh0qaofy8hYr5atMoyq+WsrHe
+        hYpGL7pCEhxJQD/Fuo8AqwrSyxEjg7sjHhZdYjTrDKyRlMIwMRRZwiBhkQk/iJlwxrM4dcuOQ7VN8IiA
+        Ngicn2C1BenlCC1mNUabhwm0TMNEEkd6ZnCsL4ijhLoniMOmGRw0TuPL7qkH+P7uDOpGOFSZglDtUeNA
+        9VmEqQ7dCeC0ff7yiX6+6r7BnWEP45by6JqYw3ckeqw/pBh8S8/fkNAh4wy+JhOZg6ZpqIldlL4n6z1Y
+        82sCq/QCVB8ch/rUedAi0D7qzV1yp24oBtNzZGB1s4m5LJy8BOPMIozBBZiCi7gzvaDQTdyemsctop++
+        WUML+MzCY40+jEd19/BMdxKrDbNQ7VbjcE0dzEJebYrnNygGkwkysLhZaIHhrJ2K3OLBDiryu1TkN2kH
+        b6bfsKJxFK9cdWLjVS9euODFOm0Aq9tDeKwzgpe6BTx9PYxVnbSKOhee33XgK0V4JcYTac2dARfzCBk4
+        Y2mYQykMKCyhX+beMkPRNCxTPHYYXFA1c3jCEEV5XwIv3uahouqu0U7jc+N0R0G2GN64bDDKxpMM5xw8
+        dtMZtLdjHHv0Aexs8ysreUvrwybtDH5qa4W9twbl/XGsN2dR1kNpaZ7BIw0TOG7lIEnsYkG2GG7ZoM/F
+        XHwGhsl5/DISQ52dx5kRHqdtMWiGOZy0CVD3RlF/WU0H1knE+RHsdSxA1SLg8bYp1NDEgokMbbpM6U52
+        CmTQ62QjlJ7OiXlFUBY+ZeNQY42iejCCk+4UDjeY8FHlJsTMPwKhRtisF+kv6sG6+jHcDCThn83Bzoml
+        h52Nk2qHuTRcfI5EY8oO3qUbQyUVehudNW9QkbfeiOG5977A2rXPYvuWl2Fv+BgB48842mnExoYAqq0x
+        jApZ2KNi6XHtEaT9Vk6a7AmKGAynYaViygVV2ogE7xJg9IWxYX0Zyso341N1NXRmB3qiOdylneWgyQ1S
+        PxONd3Bi6YUjh0cQK3rviRFzWFKE/4hsoOtz4oczl3DTx8FNR4KZdutANI9hLgMbGQzQOEt4MeBPiqVX
+        5ko4+cw+SyTVJWMOp/QrDHEZfXeA09uElP43uuTdC0w/FM3c/26OSIbBUKqDfpa/vvT/m1Cpfgdm0sET
+        BhgRDwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABhhJREFUSEuNVntMU3cYZTpl+JiIr/iYOsVHsriHmYk6I2LiC6cbwy0qy3TqnC+m
-        xmTDqPOtxE1Z4isDfMOlii+g0EoBLQUtFEpbKC1tKW2pgLzECspEd3Zu5Y8x0exLvuT23v7O+b7zfee2
-        Pl3F9u3bJyrv5kGlVrdlZGR45MxUudwjSFM9giB4EpinY2Paz5071y6VSmd2HPt/ERUVNSMmJibBWuWC
-        o7EeZpcLBpsVBSUlUGryIVfewQ1ZOk6cjUPG7WwUFBVhfUTE3I7jb4y3IiMjBygUCnVqVibyi7UwOR0o
-        IbjWbILaoIdKU4AMVQ6kfH4mIR7pmZkQQ8tnO3fuXNKB8/pIlEiqk2/JEX81CeriYlbvhM5iRqGxlB0Y
-        kFdUiKy8XGSS5PLNG5BlZ3kJnrQ/QwELIsnyDqiu48+4uDRJ8k0kJCV5OzCzA2OFDSZ7BdOOEqsFWpKJ
-        5MlyGRQ5Si9BO7MNf0Oj02H3vn2rOuBejd+jo9dLFQqcFwSvthZHJQwmE7TUX2c0MkuhMeig0euRnZuL
-        O3fvovV5Ox4+aUXz0yd40NSEbJUKu/fu3dIB2TnY4qQbaVJcunIZ+fn5sLBiA6XRsmKdXgedwQAdP+tK
-        RcJSbtk9pCkyIJ65mpKMREp7TkhATGLio4iICN8O2M5xQSKpSLx+HQX37sFcWooyDtDEDkwENRHUbDbD
-        bCmHkZ0Vi3PJVyMrV4W0TAWuSVOReOM6hGTB81qCE3Fxkiv8UiElKNdqoaMMmpwcFNIXWm6RTkxtEQzs
-        pphSafidvIJ8ZOflkSjXu8ZCetrrCfZERa2Q3LqFfFZk4oESpRIl1LVIo0EJZbJRNjOHaTGVwWq1otxm
-        Q2m5uWP4WuRy02Q0ZpcENXPmyrdOmaqW5Chb9KzaKJOhmJnL6lpSUlH43UpcPxMHZ00NyrgEJg7ebLGg
-        jJIZ6BUdSYtJJrr/FYLSBSG3XN+uxvmx41+sDAp6YWbFNpkcedwqy7FjeLZ0OVwR2xAzeQqk8Zdg5+oa
-        2ZGZsyinGU1cZ3NlJazuKmSo73UmUAYF77SEhKJmwzZ4Nkfi6OCh2Bw8C3o6tZzg1bNmo2LLL6i/lITa
-        tT8heV4I9dfBTW+4COquvo/qhno4amvgbmqEuqioM8HFvgFbK75cCkfoMrhWbYBn4zas8w/AismfoHLh
-        IljWbIR9/xG4t0biEYs4OTcE1y5L4BA3qszoXWcbTXm/vh4P/2pDEQnmz5/fWaLD/gM2Wud/AevCMNiX
-        roR1+fc4PmosDGHLYN20DfaVP6I6LBxHZwbjyJEoWDkDZ1kZHJTHxRejm9XXPGxCK13dJYEYu3r4ri2f
-        Fgzj7AUwUjIXAXWLv0bJojC4SRw9fSYO/LoLFTShi+tZQR84uUVV1N1dW+slaBMJLJauCcTYPmp0vHLy
-        VGg+/QzqaUEomM5ZTA/Gz+Mm4uCePajkdlVk34aZ/rDRB5XcIqfTCRfn8KC5Gc/eRODYtGnhjkkf4trg
-        EbgzMhCKUeOQxcxhruv7LqLCw9FEg9XSB25mLTenjsCNjQ14+NiDxpYWPBcJrNZXCUzh4Uv0ny9Gxogx
-        SBs0AimDhkPROwAp/YcghYSqoaNxtG8/nFy1CpWs3MH3k52vECdJqqpeStTQ8pjwJLD9hyArNPQj1Zx5
-        kA0diZsETCe4vJc/oseMx9U+AZD5D4Z0yAhk8/4Bn244u2MH6jjUKspzn/JUi/qzi8ZWccQiga0zgX76
-        jN/yCC7tNwgqApWT5OikjxF9+hSurf4Bch8fqPoNROaQ93C3mx8uBo6HngZ71NCAhro6ND1q5iv7CZra
-        nnZNENrDd00tpXlAgAZWu390YG467Y6GRjxj27qDh+EeOAwu/0Go7d0faWHfoKa1xQvWVXDonsDAwM4z
-        mNOrz2q8PwF7e/qd9/HzGx576lSVJDa2SoiLtR8TBPv+oLnO5u7v4I+JEx+sP3TIduHixUohIcEeLyTY
-        +S/Dm0KSYL+pUNQdP3nSRMihL5H5Y8/sIV584Of3lZ+PzzBe9mK+K95jdGeK1wETevYM8/X1DeR1b2ZP
-        phji+X+nGOIZYvi8/Q8tRA7O5+yLvAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYYSURBVEhLjVZ7TFN3GGU6ZfiYiK/4mDrFR7K4h5mJOiNi
+        4gunG8MtKst06pwvpsZkw6jzrcRNWeIrA3zDpYovoNBKAS0FLRRKWygtbSltqYC8xArKRHd2buWPMdHs
+        S77k9t7+zvm+833ntj5dxfbt2ycq7+ZBpVa3ZWRkeOTMVLncI0hTPYIgeBKYp2Nj2s+dO9culUpndhz7
+        fxEVFTUjJiYmwVrlgqOxHmaXCwabFQUlJVBq8iFX3sENWTpOnI1Dxu1sFBQVYX1ExNyO42+MtyIjIwco
+        FAp1alYm8ou1MDkdKCG41myC2qCHSlOADFUOpHx+JiEe6ZmZEEPLZzt37lzSgfP6SJRIqpNvyRF/NQnq
+        4mJW74TOYkahsZQdGJBXVIisvFxkkuTyzRuQZWd5CZ60P0MBCyLJ8g6oruPPuLg0SfJNJCQleTswswNj
+        hQ0mewXTjhKrBVqSieTJchkUOUovQTuzDX9Do9Nh9759qzrgXo3fo6PXSxUKnBcEr7YWRyUMJhO01F9n
+        NDJLoTHooNHrkZ2bizt376L1eTsePmlF89MneNDUhGyVCrv37t3SAdk52OKkG2lSXLpyGfn5+bCwYgOl
+        0bJinV4HncEAHT/rSkXCUm7ZPaQpMiCeuZqSjERKe05IQExi4qOIiAjfDtjOcUEiqUi8fh0F9+7BXFqK
+        Mg7QxA5MBDUR1Gw2w2wph5GdFYtzyVcjK1eFtEwFrklTkXjjOoRkwfNaghNxcZIr/FIhJSjXaqGjDJqc
+        HBTSF1pukU5MbREM7KaYUmn4nbyCfGTn5ZEo17vGQnra6wn2REWtkNy6hXxWZOKBEqUSJdS1SKNBCWWy
+        UTYzh2kxlcFqtaLcZkNpublj+FrkctNkNGaXBDVz5sq3TpmqluQoW/Ss2iiToZiZy+paUlJR+N1KXD8T
+        B2dNDcq4BCYO3myxoIySGegVHUmLSSa6/xWC0gUht1zfrsb5seNfLAkKemFmxTaZHHncKsuxY3i2dDlc
+        EdsQM3kKpPGXYOfqGtmRmbMopxlNXGdzZSWs7ipkqO91JlAGBe+0hISiZsM2eDZH4ujgodgcPAt6OrWc
+        4NWzZqNiyy+ov5SE2rU/IXleCPXXwU1vuAjqrr6P6oZ6OGpr4G5qhLqoqDPBxb4BWyu+XApH6DK4Vm2A
+        Z+M2rPMPwIrJn6By4SJY1myEff8RuLdG4hGLODk3BNcuS+AQN6rM6F1nG015v74eD/9qQxEJ5s+f31mi
+        w/4DNlrnfwHrwjDYl66Edfn3OD5qLAxhy2DdtA32lT+iOiwcR2cG48iRKFg5A2dZGRyUx8UXo5vV1zxs
+        Qitd3SWBGLt6+K4tnxYM4+wFMFIyFwF1i79GyaIwuEkcPX0mDvy6CxU0oYvrWUEfOLlFVdTdXVvrJWgT
+        CSyWrgnE2D5qdLxy8lRoPv0M6mlBKJjOWUwPxs/jJuLgnj2o5HZVZN+Gmf6w0QeV3CKn0wkX5/CguRnP
+        3kTg2LRp4Y5JH+La4BG4MzIQilHjkMXMYa7r+y6iwsPRRIPV0gduZi03p47AjY0NePjYg8aWFjwXCazW
+        VwlM4eFL9J8vRsaIMUgbNAIpg4ZD0TsAKf2HIIWEqqGjcbRvP5xctQqVrNzB95OdrxAnSaqqXkrU0PKY
+        8CSw/YcgKzT0I9WceZANHYmbBEwnuLyXP6LHjMfVPgGQ+Q+GdMgIZPP+AZ9uOLtjB+o41CrKc5/yVIv6
+        s4vGVnHEIoGtM4F++ozf8ggu7TcIKgKVk+TopI8RffoUrq3+AXIfH6j6DUTmkPdwt5sfLgaOh54Ge9TQ
+        gIa6OjQ9auYr+wma2p52TRDaw3dNLaV5QIAGVrt/dGBuOu2OhkY8Y9u6g4fhHjgMLv9BqO3dH2lh36Cm
+        tcUL1lVw6J7AwMDOM5jTq89qvD8Be3v6nffx8xsee+pUlSQ2tkqIi7UfEwT7/qC5zubu7+CPiRMfrD90
+        yHbh4sVKISHBHi8k2Pkvw5tCkmC/qVDUHT950kTIoS+R+WPP7CFefODn95Wfj88wXvZiviveY3RnitcB
+        E3r2DPP19Q3kdW9mT6YY4vl/pxjiGWL4vP0P8xUOwiqLseMAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="telerikMetroTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -184,19 +184,7 @@
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 56</value>
   </metadata>
-  <data name="toolStripButton3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
-        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
-        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
-        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
-        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
-        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
-        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
-        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
-        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
-        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
-</value>
-  </data>
+  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>122, 56</value>
+  </metadata>
 </root>
