--- a/UcasProjectManagement/UcasProWindowsForm/Forms/ActivitiesForm/FrmAllActivitesMange.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/ActivitiesForm/FrmAllActivitesMange.resx
@@ -117,9 +117,130 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABQ1JREFUSEu9lW1sU1UYxyufCX7TxJCYqF8UTfzgF0gmITNDRFSUEWAiifEF/SIJ
+        RoVgUQmYGKLLKMhGgACDbeyt6zaKBGrHxui2ruu69b2da0tfbu/t2rVbe/ty+ve5dx0Viyaa6D/55dzc
+        e87/Oed57jlH8b+qWCzuZYz1l9D8A7REL4DaklWlyLwmm82GqdO/Vj6fd1PzVMmyrEKxuI8+zhSKSx1Z
+        sQh6RwAFJkHPfwf1lYZK/Wklx0u2ZYmMNS6bq10x1Hbb8V6vE3U9TmzvcmBrhw1b2m147aq1glfbrKi6
+        NIkOhyCPzzDWVrItS8wz1VxygeYCOGIZdFEQjXsOPUS3M4ZOot0ew1W7UEEbcXmah13IgBaCTI5dLtmW
+        laYAQmKB5SkdVj5NZgK6SsayiU1Aq5XH5YfQTJy3ROVxUhYWc6y5ZFvWfJapohRAWmI3zV5Kz8daDz64
+        5sGeXhfqNC7sUDuxjdL1Z97udGAjpanTuZSihczDAohMFYylWEJkiKYL8CaymCGk1hMXZdwSc5W4pDae
+        xVymCJ7GksfZkm1ZsTRTBSgA+dOyo3iLirpD7UAtzVB63kzF3Ng2jeorlaxvnkJNqx39QRGTCUAzy3SH
+        gRUl6yVFKcAMn2SRRUazzsEYTsuME2PhRYwSIxKhBzEQllgeJ2+acbCxDbYM0BEAznlZY8l6ScGFvMoT
+        TTKBlqn1JnB40I+jdwI4QigHAzg04McBvQ9f6GYf4LvbfjRNcKgbCECxW4n99WcQojro4sApc/LS8WG+
+        7n4AF5dk3GIR/d55fEumR4eDcoBv6PlrMjqo9+MrCiJxYMAHJbGT0vdksw2rfoljhUaA4v1jUJ48B1oE
+        epypwkVr+rocwDefV01H5pl3Pg8LL0LvX4A+kMJAYAG/+lIyOuLWbBI3iWH6Zgym8OkIj1WaEB5V38Mz
+        ugRWaueg2KXEoYYmGISiciBWXCcHmInnVVPBeRZMMZwxU5E7bdhORX6HivwG7eBN9BvWtE7jlSsWrL9i
+        xwvn7VjT4cbKniAe6wvjJZ2Ap6+FsKKPVtE0hed37v9SNl6WJ55VmQJxZhNysESzMATTuCuziGGJe0uM
+        RbIYmeWxXTsFRTuHJ7QRVN+J48VbPBRU3VUdPnym9/WWbMuyx7IqYyDBPAmGs5M8dtEZtKfXg90aN3Z0
+        O+WVvNnhwIYOP37s7oJ5qAHVwzGsNeRRNUhpaffjkRYvjhk5iCK7ULIty0oBDL44m+Jz0M4k8fNEFE1m
+        HqcneJwyRaEa53DCJEA5FEHzJSUdWCcQ4yewZzIFRaeAx7tn0UATC8RztOlylTvZImRVw7NzbILS0+dN
+        yoaS8UkThwZjBPWjYZywpnGoZQAf1m5A1PADEGyFyXiB/qJBrGl24YY7AedcAWYuU3nYmTixcZzLYoov
+        kGlU3sE71S7UUqG30lnzOhV5y/Uonnv3c6xe/Sy2bX4Z5paP4Nb/hCN9eqxvcaPeGMW0kIc5kqk8rm2C
+        uM/IiTODgQxGQ1kYqZhSQeU2LMK+COgdIaxbW4Wq6k34RFkPtWESg5ECbtPOmqTJjVK/ARo/yWUqLxxJ
+        NiFTM3QvEzaERNn4j0gB1Hcs+P70RdxwcLDSkWCg3Xo3UsQ4l4OJAtylcSOhBbczkam8Mpdl4XN7R8Lp
+        fglDKK1ZZozLaXRuTmMS0prf6JK3pphmLJK7/90QFrWjwXQv/Sx/fen/N1IofgeNWsV45SX3AAAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
+  <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABhhJREFUSEuNVntMU3cYZW7K8In4io+pU6Ymi3uYmagzKibia7ox3KKyTKfO+WJq
+        TDaMOt9K3JQlTpcBOkV6qeILKLRSQEtBC4XSFkpLW0pbKiAvsYIy0Z2dW/ljTDT7ki+5vbe/c77vfN+5
+        rV93sXPnzkmq2/lQazTtmZmZXgUzTaHwCrI0ryAIXgnz97jYjgRB0iGTyWZ1Hvt/ER0dPTM2NlZiq3bD
+        2dQAi9sNo92GwtJSqLQFUKhu4Zo8A7+djUfmzRwUFhdjY2RkaOfxV8ZrUVFRg5RKpSYtOwsFJTqYXU6U
+        ElxnMUNjNECtLUSmOhcyPj8jSURGVhbE0PHZ7t27l3XivDySpNKalBsKJF5OhqakhNW7oLdaUGQqYwdG
+        5BcXITs/D1kkuXj9GuQ52T6CRx1PUMiCSLKyE6r7+CM+Pl2ach2S5GRfBxZ2YKq0w+yoZDpQarNCRzKR
+        PEUhhzJX5SPoYLbjb2j1euw9cGBNJ9yL8UtMzEaZUolzguDT1uqsgtFsho76600mZhm0Rj20BgNy8vJw
+        6/ZttD3twP1HbWh5/Aj3mpuRo1Zj7/792zohuwZbnHwtXYYLly6ioKAAVlZspDQ6Vqw36KE3GqHnZ32Z
+        SFjGLbuDdGUmxDOXU1OQRGn/FCSITUp6EBkZ6d8J2zXOS6WVSVevovDOHVjKylDOAZrZgZmgZoJaLBZY
+        rBUwsbMScS4FGmTnqZGepcQVWRqSrl2FkCJ4X0rwW3y89BK/VEQJKnQ66CmDNjcXRfSFjlukF1NXDCO7
+        KaFUWn4nv7AAOfn5JMrzrbGQkf5ygn3R0aukN26ggBWZeaBUpUIpdS3WalFKmeyUzcJhWs3lsNlsqLDb
+        UVZh6Ry+DnncNDmN2S1B7bxQxfap0zTSXFWrgVWb5HKUMPNYXWtqGoq+Xo2rZ+Lhqq1FOZfAzMFbrFaU
+        UzIjvaInaQnJRPe/QFC2cNEN91drcW78hGfb5oc+s7Biu1yBfG6V9cQJPFm+Eu7IHYidMhWyxAtwcHVN
+        7MjCWVTQjGaus6WqCjZPNTI1d7oSqGaH7LYuCkPtph3wbo3C8aHDsTVkDgx0agXBa+bMReW2H9FwIRl1
+        679HyvxF1F8PD73hJqin5i5qGhvgrKuFp7kJmuLirgQJ/YK2V362HM6wFXCv2QTv5h3YEBiEVVM+RNXi
+        JbCu2wzHwWPwbI/CAxZxKnQRrlyUwiluVLnJt852mvJuQwPu/9WOYhIsWLCgq0RHAwdtti34FLbF4XAs
+        Xw3bym9wcsx4GMNXwLZlBxyrv0NNeASOzwrBsWPRsHEGrvJyOCmPmy9GD6uvvd+MNrq6WwIx9vT0X18x
+        PQSmuQthomRuAuqXfoHSJeHwkDhmxiwc+mkPKmlCN9ezkj5wcYuqqbunrs5H0C4SWK3dE4ixc8zYRNWU
+        adB+9DE002ejcAZnMSMEP7wzCYf37UMVt6sy5yYs9IedPqjiFrlcLrg5h3stLXjyKgLnli2Ld01+D1eG
+        jsKt0cFQjnkH2cxc5oZ+/REdEYFmGqyOPvAw67g59QRuamrE/YdeNLW24qlIYLO9SGCOiFhm+GQpMkeN
+        Q/qQUUgdMhLKPkFIHTgMqSRUDx+L4/0G4NSaNahi5U6+nxx8hbhIUl39XKLG1oeEJ4H9PwTZYWHvq+fN
+        h3z4aFwnYAbBFb0DETNuAi73DYI8cChkw0Yhh/cP+fXA2V27UM+hVlOeu5SnRtSfXTS1iSMWCexdCQwz
+        Zv6cT3DZgCFQE6iCJMcnf4CY30/jytpvofDzg3rAYGQNewu3ewQgIXgCDDTYg8ZGNNbXo/lBC1/Zj9Dc
+        /rh7grCe/uvqKM09AjSy2oNjg/MyaHc0NuEJ29YfPgrP4BFwBw5BXZ+BSA//ErVtrT6w7oJD9wYHB3ed
+        wbzefdfi7YnY3yvgnF9AwMi406erpXFx1UJ8nOOEIDgOzg51tbz+Jn6dNOnexiNH7OcTEqoEicSRKEgc
+        /JfhSyFZcFxXKutPnjplJuTw58j8sWf2FC/eDQj4PMDPbwQvezP7i/cYrzPF66CJvXqF+/v7B/O6D7MX
+        Uwzx/L9TDPEMMfze+AdRAg79Jy9yBgAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="projectSubActivityBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 56</value>
   </metadata>
+  <data name="gridViewCommandColumn3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABQ1JREFUSEu9lW1sU1UYxyufCX7TxJCYqF8UTfzgF0gmITNDRFSUEWAiifEF/SIJ
+        RoVgUQmYGKLLKMhGgACDbeyt6zaKBGrHxui2ruu69b2da0tfbu/t2rVbe/ty+ve5dx0Viyaa6D/55dzc
+        e87/Oed57jlH8b+qWCzuZYz1l9D8A7REL4DaklWlyLwmm82GqdO/Vj6fd1PzVMmyrEKxuI8+zhSKSx1Z
+        sQh6RwAFJkHPfwf1lYZK/Wklx0u2ZYmMNS6bq10x1Hbb8V6vE3U9TmzvcmBrhw1b2m147aq1glfbrKi6
+        NIkOhyCPzzDWVrItS8wz1VxygeYCOGIZdFEQjXsOPUS3M4ZOot0ew1W7UEEbcXmah13IgBaCTI5dLtmW
+        laYAQmKB5SkdVj5NZgK6SsayiU1Aq5XH5YfQTJy3ROVxUhYWc6y5ZFvWfJapohRAWmI3zV5Kz8daDz64
+        5sGeXhfqNC7sUDuxjdL1Z97udGAjpanTuZSihczDAohMFYylWEJkiKYL8CaymCGk1hMXZdwSc5W4pDae
+        xVymCJ7GksfZkm1ZsTRTBSgA+dOyo3iLirpD7UAtzVB63kzF3Ng2jeorlaxvnkJNqx39QRGTCUAzy3SH
+        gRUl6yVFKcAMn2SRRUazzsEYTsuME2PhRYwSIxKhBzEQllgeJ2+acbCxDbYM0BEAznlZY8l6ScGFvMoT
+        TTKBlqn1JnB40I+jdwI4QigHAzg04McBvQ9f6GYf4LvbfjRNcKgbCECxW4n99WcQojro4sApc/LS8WG+
+        7n4AF5dk3GIR/d55fEumR4eDcoBv6PlrMjqo9+MrCiJxYMAHJbGT0vdksw2rfoljhUaA4v1jUJ48B1oE
+        epypwkVr+rocwDefV01H5pl3Pg8LL0LvX4A+kMJAYAG/+lIyOuLWbBI3iWH6Zgym8OkIj1WaEB5V38Mz
+        ugRWaueg2KXEoYYmGISiciBWXCcHmInnVVPBeRZMMZwxU5E7bdhORX6HivwG7eBN9BvWtE7jlSsWrL9i
+        xwvn7VjT4cbKniAe6wvjJZ2Ap6+FsKKPVtE0hed37v9SNl6WJ55VmQJxZhNysESzMATTuCuziGGJe0uM
+        RbIYmeWxXTsFRTuHJ7QRVN+J48VbPBRU3VUdPnym9/WWbMuyx7IqYyDBPAmGs5M8dtEZtKfXg90aN3Z0
+        O+WVvNnhwIYOP37s7oJ5qAHVwzGsNeRRNUhpaffjkRYvjhk5iCK7ULIty0oBDL44m+Jz0M4k8fNEFE1m
+        HqcneJwyRaEa53DCJEA5FEHzJSUdWCcQ4yewZzIFRaeAx7tn0UATC8RztOlylTvZImRVw7NzbILS0+dN
+        yoaS8UkThwZjBPWjYZywpnGoZQAf1m5A1PADEGyFyXiB/qJBrGl24YY7AedcAWYuU3nYmTixcZzLYoov
+        kGlU3sE71S7UUqG30lnzOhV5y/Uonnv3c6xe/Sy2bX4Z5paP4Nb/hCN9eqxvcaPeGMW0kIc5kqk8rm2C
+        uM/IiTODgQxGQ1kYqZhSQeU2LMK+COgdIaxbW4Wq6k34RFkPtWESg5ECbtPOmqTJjVK/ARo/yWUqLxxJ
+        NiFTM3QvEzaERNn4j0gB1Hcs+P70RdxwcLDSkWCg3Xo3UsQ4l4OJAtylcSOhBbczkam8Mpdl4XN7R8Lp
+        fglDKK1ZZozLaXRuTmMS0prf6JK3pphmLJK7/90QFrWjwXQv/Sx/fen/N1IofgeNWsV45SX3AAAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
+  <data name="gridViewCommandColumn4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABhhJREFUSEuNVntMU3cYZW7K8In4io+pU6Ymi3uYmagzKibia7ox3KKyTKfO+WJq
+        TDaMOt9K3JQlTpcBOkV6qeILKLRSQEtBC4XSFkpLW0pbKiAvsYIy0Z2dW/ljTDT7ki+5vbe/c77vfN+5
+        rV93sXPnzkmq2/lQazTtmZmZXgUzTaHwCrI0ryAIXgnz97jYjgRB0iGTyWZ1Hvt/ER0dPTM2NlZiq3bD
+        2dQAi9sNo92GwtJSqLQFUKhu4Zo8A7+djUfmzRwUFhdjY2RkaOfxV8ZrUVFRg5RKpSYtOwsFJTqYXU6U
+        ElxnMUNjNECtLUSmOhcyPj8jSURGVhbE0PHZ7t27l3XivDySpNKalBsKJF5OhqakhNW7oLdaUGQqYwdG
+        5BcXITs/D1kkuXj9GuQ52T6CRx1PUMiCSLKyE6r7+CM+Pl2ach2S5GRfBxZ2YKq0w+yoZDpQarNCRzKR
+        PEUhhzJX5SPoYLbjb2j1euw9cGBNJ9yL8UtMzEaZUolzguDT1uqsgtFsho76600mZhm0Rj20BgNy8vJw
+        6/ZttD3twP1HbWh5/Aj3mpuRo1Zj7/792zohuwZbnHwtXYYLly6ioKAAVlZspDQ6Vqw36KE3GqHnZ32Z
+        SFjGLbuDdGUmxDOXU1OQRGn/FCSITUp6EBkZ6d8J2zXOS6WVSVevovDOHVjKylDOAZrZgZmgZoJaLBZY
+        rBUwsbMScS4FGmTnqZGepcQVWRqSrl2FkCJ4X0rwW3y89BK/VEQJKnQ66CmDNjcXRfSFjlukF1NXDCO7
+        KaFUWn4nv7AAOfn5JMrzrbGQkf5ygn3R0aukN26ggBWZeaBUpUIpdS3WalFKmeyUzcJhWs3lsNlsqLDb
+        UVZh6Ry+DnncNDmN2S1B7bxQxfap0zTSXFWrgVWb5HKUMPNYXWtqGoq+Xo2rZ+Lhqq1FOZfAzMFbrFaU
+        UzIjvaInaQnJRPe/QFC2cNEN91drcW78hGfb5oc+s7Biu1yBfG6V9cQJPFm+Eu7IHYidMhWyxAtwcHVN
+        7MjCWVTQjGaus6WqCjZPNTI1d7oSqGaH7LYuCkPtph3wbo3C8aHDsTVkDgx0agXBa+bMReW2H9FwIRl1
+        679HyvxF1F8PD73hJqin5i5qGhvgrKuFp7kJmuLirgQJ/YK2V362HM6wFXCv2QTv5h3YEBiEVVM+RNXi
+        JbCu2wzHwWPwbI/CAxZxKnQRrlyUwiluVLnJt852mvJuQwPu/9WOYhIsWLCgq0RHAwdtti34FLbF4XAs
+        Xw3bym9wcsx4GMNXwLZlBxyrv0NNeASOzwrBsWPRsHEGrvJyOCmPmy9GD6uvvd+MNrq6WwIx9vT0X18x
+        PQSmuQthomRuAuqXfoHSJeHwkDhmxiwc+mkPKmlCN9ezkj5wcYuqqbunrs5H0C4SWK3dE4ixc8zYRNWU
+        adB+9DE002ejcAZnMSMEP7wzCYf37UMVt6sy5yYs9IedPqjiFrlcLrg5h3stLXjyKgLnli2Ld01+D1eG
+        jsKt0cFQjnkH2cxc5oZ+/REdEYFmGqyOPvAw67g59QRuamrE/YdeNLW24qlIYLO9SGCOiFhm+GQpMkeN
+        Q/qQUUgdMhLKPkFIHTgMqSRUDx+L4/0G4NSaNahi5U6+nxx8hbhIUl39XKLG1oeEJ4H9PwTZYWHvq+fN
+        h3z4aFwnYAbBFb0DETNuAi73DYI8cChkw0Yhh/cP+fXA2V27UM+hVlOeu5SnRtSfXTS1iSMWCexdCQwz
+        Zv6cT3DZgCFQE6iCJMcnf4CY30/jytpvofDzg3rAYGQNewu3ewQgIXgCDDTYg8ZGNNbXo/lBC1/Zj9Dc
+        /rh7grCe/uvqKM09AjSy2oNjg/MyaHc0NuEJ29YfPgrP4BFwBw5BXZ+BSA//ErVtrT6w7oJD9wYHB3ed
+        wbzefdfi7YnY3yvgnF9AwMi406erpXFx1UJ8nOOEIDgOzg51tbz+Jn6dNOnexiNH7OcTEqoEicSRKEgc
+        /JfhSyFZcFxXKutPnjplJuTw58j8sWf2FC/eDQj4PMDPbwQvezP7i/cYrzPF66CJvXqF+/v7B/O6D7MX
+        Uwzx/L9TDPEMMfze+AdRAg79Jy9yBgAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="projectActivityBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>139, 20</value>
   </metadata>
@@ -147,6 +268,9 @@
   </metadata>
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>227, 56</value>
+  </metadata>
+  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>332, 56</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>103</value>
