--- a/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmManageExpenses.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmManageExpenses.resx
@@ -184,4 +184,7 @@
         phji+X+nGOIZYvi8/Q9UBA7WCVn92gAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>227, 56</value>
+  </metadata>
 </root>
