--- a/UcasProjectManagement/UcasProWindowsForm/Forms/MainForm/FrmAdmin.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/MainForm/FrmAdmin.resx
@@ -123,9 +123,6 @@
   <metadata name="telerikMetroTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>399, 17</value>
   </metadata>
-  <metadata name="office2013LightTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>561, 17</value>
-  </metadata>
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>740, 17</value>
   </metadata>
@@ -182,11 +179,11 @@
   <data name="toolStripDropDownButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABoAAAAeCAYAAAAy2w7YAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAD7SURBVEhL7ZbBDYJAEEUtgRIogRIohRIsgRIswZMN2ABH
-        T8YONBw8Gz3D+gb3sIFdsgurIYaX/MzH7Mx3ICFsBKVU7pA3TdOcKLYZaRfCgR0XA/j9qa0XnK+17fNA
-        mWxTdZcGNL3QHd0CVKOrHtGntAVVNBzQUXyI6DnreqGaDIO6+wnYMkQMl0dQ6F55NibuoDkwZg2aBmP8
-        g7ApkoYQJbpXvMkCgubAGP8g7P9tJIetb4ERdW9q6rrRNBizbmT912Na8EYh0FYgc7M9MokWlGsrPkPy
-        5WMSN4hqCxHiBSFXiBAnqG3bLa2uEGEY9CV+GzR2b2fz+WpVyRt/aoXdZGYG4QAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAD8SURBVEhL7ZbNDYJAEIUtgRIogRIohRIsgRIswZMN2ABH
+        T8YONBw8G73y4zfrHjawS1hYDTF8ycu8TZh5DCSEjdC2berQaKqqOlFsM2IVUtf1jkMPGp/ajoLrS227
+        PFAi2xTqaEDTC93RzUMluuoRXXJbUMGWB3QU7yOCzrpeqCb9IPU8AZv7SL+CTPfKuzFxB82BMWvQNBgz
+        PggbI2nwUaR7xZssIGgOjBkfhP2/jeRi61dgQOpLTV03mgZj1o2sdz2kBW/kA20ZMjfbI5NgQam24hMk
+        fz4mYYOothAhXBByhQhhgpqm2dLqChH6QV/it0FDz3Y2n7/WNnoD2GKFnkVU/p0AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="EmployeeAddBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -202,97 +199,6 @@
         K42ecX00dltGZ/xoP9rBaOBYNKzqykVjt1PR/L48HQ1sRj/4yWQ3ml/ySkTDqnZ7tDnWnos2L7mdaL5A
         Xmk0LBBvRvMFUr1oYBmNE+JgNPBmNH5+WEY/7wUDo/XcpJaNP24zUbSV0LbJTrJoN6nvkf0O0wE5JP86
         Tf/JEdelH5MTkkNGrts4JWfkHKTQBbksuOoBdzfL92QG9Q1Yz4tKAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="EmployeeAddBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABoAAAAeCAYAAAAy2w7YAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAD8SURBVEhL7ZbNDYJAEIUtgRIogRIohRIsgRIswZMN2ABH
-        T8YONBw8G73y4zfrHjawS1hYDTF8ycu8TZh5DCSEjdC2berQaKqqOlFsM2IVUtf1jkMPGp/ajoLrS227
-        PFAi2xTqaEDTC93RzUMluuoRXXJbUMGWB3QU7yOCzrpeqCb9IPU8AZv7SL+CTPfKuzFxB82BMWvQNBgz
-        PggbI2nwUaR7xZssIGgOjBkfhP2/jeRi61dgQOpLTV03mgZj1o2sdz2kBW/kA20ZMjfbI5NgQam24hMk
-        fz4mYYOothAhXBByhQhhgpqm2dLqChH6QV/it0FDz3Y2n7/WNnoD2GKFnkVU/p0AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="toolStripDropDownButton2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAD0AAAAoCAYAAABNefLBAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EwAACxMBAJqcGAAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAIvSURBVGhD7dHJ
-        S9RxGMfx3yEIOgRBhyDoEAQRdImgQ5ARREQREQ0RRUQRUUQFFbSgT6jhQoopmpqoqVA+FS0uuTbti2uZ
-        Oi4zavstamZ+6xRPH/Hbf/EcXueH9/OxGmeC0Po3Sd7wNskbYRNsfmfzFtgK22BHj807YVevzSHYA3v7
-        bN4PB/ptPtjv8CE4MuDwUTgGJwYdPgmn3jt8Gs58cPgsnIPzQy5fgIsfXU6HjGGXCTJHXM6CbMgZdTkX
-        8iIu50PBmMeFUATF4x6XTHhcCmVQPulxBVRGPa6K+lwd87kGaqFuyud6aJj2eejnn5CIWBYOk9X0S+b8
-        FqvZaDFajcdGm9E+Ky5Wh9FpdBndc+Y9ict8WBCOy8JwQhY9TchiWPIsIUufJ2QZLH+RkBWw8mVSVsHq
-        V0lZ8zopa2EdYBTBKIJBBIMIxpDtPbZgCNndawtGkH19tmAAwfPlMODxcnzQETxe8HTB06X7e4o0WqM1
-        2tBo0GjQaNBojdZojdZojdZojdZojdZojdZojTY0GjQaYRoNGq3RGq3RGq3RGq3RGq3RGq3R/6PDP1Jp
-        s+GXIB0yhl0iuAyZIy5lQTZcGXUpB3IhL+JSPlyNeFQw5lEhFMG1cY+KoWTCo1Iog+uTHpVDBVRGPboR
-        9akKqmM+1UAt3JzyqQ7qjYZpn24Zt2cCagSGO58Cugv34P7ngB7AQ3j0JaAmaP6aohZohbZvKWqHDuhE
-        bBfE4n/TRMT6B3+XK7cJddyHAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="toolStripDropDownButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABoAAAAcCAYAAAB/E6/TAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIGSURBVEhLrZa7UQMxFEUpwSW4BJfgElyCSyAlYTwkpK7A
-        4xJIiHFASMAMEZlLgCG2l3uenmx5V9LuGs7Mm9XnSlf7pP3cRJqmmSjmHjNvHoXGTZM5pt58hokVX4qU
-        rXcPQvplGHbB0rtPd9I2MQ6Hw9plVSRdhBFZFiZiMm8o0U1BC83x7toO9JlI5V1oKhJWVMF1RaKoz2hl
-        wgLqZ+OrRGGf0dyEFVxXxETH4/HW6zk4JBMTVpCmuFjt0VMUTVTZh+YO1bRFpKul7/xMUsmcnEEmEek5
-        4uljQjl/kNTBg8vqetNVwsfn9xUDcqlrhNWMvqN0C7x8viNV2m+Gr2TA0D2qvRnC3VGgxh4pXjFRPHvs
-        TdSDhq+Yo0BYrArR6OLkUdfRvzdRD5IPNwJNnu6TwXNmwgKSMH6ckdjJbOPlE76AzklUe3whjzYCDsMj
-        11ANqI3U2sOn61T19Lm7ysjQRJvWZAapdNOU640AI0Xne6W2F8WHl0nr34zANe3XCwYPutinWlczUtuP
-        Lm++kG/axHAj0MC1wu4CqHsXc/C/wEHCaEuo/EmbYpyRihyAtfboTmUmjgcj91OSQiZmg41KSMKquQvm
-        yQV9u/8yCunJQB8aCnwasihV4Q+mgmTDjLzC7bUht0P+FzAys0JwSMLnHNTAplo+XdD7PwfSkZFo1glM
-        mqaZ/AItP+yShFlGWgAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="UserMangBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAHAAAAA+CAYAAADzsp9XAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EwAACxMBAJqcGAAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAZ9SURBVHhe7dVl
-        sxxVEIDh/EXcQ/CgwYIFCe7uTgTibljwuN24ERISIJWCqlAF34fTPd1nz0yGOzvvLrt3uXuq3vMHnuru
-        CaeOn87Wzh0Zta+kecW+9ubvLPSNtKDUwl2xb9MW5X1XbvFu7fu0JXk/xPbkLc1b5y1rtX7Z3rzlxTZ4
-        K4ptXLEvb2WrTd4qb7+2eXV1W9ZIB7St3qfFtnmfeQez7Z9Xt+ML75A2Yp088kcW3vQJu9cdze4/a8ao
-        PXB26JyZsQfPnZk95J03S5t+ft7D0gWzY49cGLro49ijoccuti75RHvceuLS0GVzYk9OnJM9NXFu3uV5
-        T0/Ke2bSvLwr8p69cl723FXzCz1/9QLthWuKvXjtQu2l66zJC7OXJy+KvXJ96IbF2qvWazdaNy3RXr85
-        7w3plqWxN6cszd6askx7+1brtrx3bl+uvevdsTx7784V2vtT8z6YujLvrrwP78776J5V2gxr5MtD3QN0
-        PALoeAjQ8AhgxAOAjkcAIx4AdLyOAAWPAhbwAKDj9Row4g0ioOJBQMWDgILXD0DFg4CCdwag4RFAx+sZ
-        oOJBQMWDgIKHAQMeBVS8EqDj1QIGvDJgxKsDvHd1lwADHgYMaBRQ8SCg4GHAgEcBBY8CCt64BUzxmgIK
-        3v8SMF2fQ8BqQMWjgAGvu4CGhwANjwBGPABYtT7bBgxo4xfQ8BCg4RHAFK8poOMhQMMjgI7XV0DHI4CO
-        hwANjwBGPADoeAQw4gHAiNcJoOBRQMHDgAlerwEjHgE0vL4BKh4EVDwIKHj9AFQ8CCh4FLCAZ4CO1zNA
-        xYOAigcBBQ8DBjwKqHgUMOBhwIDXHcCAhwEDGgVUPAgoeBgw4FFAwaOAgtdVwHT6mgKm0zfWAQWPAioe
-        Bay4f50BGh4CNDwCGPEAoOMNAZsCGt5AAwY0ClhYn+MO0PAIYIrXFNDxEKDhEUDHI4Az7wOAglcGdLw6
-        QMErAzpeLWDAOwPQ8OoAUzwHjHgA0PEIYMQDgBGvCaDiQUDFg4CCN1YAIx4BNDwC6HhDwAaAigcBBY8C
-        Cl7fARUPAioeBBQ8DBjwKKDiUcCAhwEDXv8BAxoFVDwIKHgYMOBRQMGjgILXVcCIBwDT6WsKWJi+MQ6o
-        eBQw4HUX0PAQoOERwIgHAB0PARoeASxMX0PAdPr6B2h4CNDwCGCK1xTQ8RCg4RFAxyOAgtc5YIJHAB0P
-        ARoeAYx4ANDxCGDEA4ARrxNAwaOAgocBAx4FTPGaAhbwCKDh9Q1Q8SCg4kFAwesHoOJBQMGjgIJXBnS8
-        OsCda7sEqHgQUPEgoOBhwIBHARWPAgY8DBjwBhpQ8SCg4GHAgEcBBY8CCt4QcAjYAox4ADDiAcDC+vw/
-        Awa87gIaHgI0PAIY8QCg4yFAwyOAjkcA0+nrH6DhIUDDI4ApXlNAx0OAhkcAHY8AOl4jwKr71y7gaPev
-        FjC5fxHQ8OoAUzwHjHg1gIJXBnS8OkDFKwFGPAAY8ZoAVt2/dgGr7l+7gFX3byABDY8AOl7PACvv34AB
-        Kh4EFDwKKHgUcNa0MQCoeBBQ8DBgwKOAikcBAx4GDHhdBSyszzEOKHgYMOBRQMGjgILXVcCIBwAjHgB0
-        vF4DptM3mICGhwANjwBGPADoeAjQ8MYnoOEhQMMbZEDHI4ARDwEeBoABDwMGNAqoeCXAFK8poOMhQMMj
-        gI5HAB2vEaDgUUDBw4AB7wxAw6sDTPEcMOLVAApeGdDx6gAVrwQY8QBgxGsCqHgQUPEgoOCNa8AEr2eA
-        ijfggIoHAQWPAgoeBRS8vgMqHgQUPAwY8NoGrLp/bQJW3b92AavuX1cBC+uzIWBh+oaAvQGMeAAw4gFA
-        x+s1YLo+GwMm67N/gIaHAA2PAEY8AOh4CNDwCKDjEcCIBwBnT1vTJUDDQ4CGRwBTvKaAjocADY8AOh4B
-        dLzOAAMeBgxoFFDxIGABDwA6HgGMeAAw4nUCKHgUUPAwYMCjgCleU0DBo4CKRwEDXlcAFQ8CKh4EFLx+
-        ACoeBBQ8Cih4FFDw+g6oeBBQ8DBgwKOAikcBAx4GDHhDwB4DCh4FFLz/FNDxCGBhfTYFTNbnELAE+Ofv
-        f2eC2OqYtmf96O2VNpT7ObZvY02b8vbHjrfa3OpAVVuKHdxyorqtJ7JD/9Y27xftcLntrX4st8P7VTuS
-        NlLdT95O77fYUW9Xdce83d7J7PSpv3LA8A0b2LIJ/wAgPV5q4cK/XAAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="UserMangBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAdCAYAAADLnm6HAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIvSURBVEhLtZfLccIwFEUpgQ5CBRlKoAT22VBC2LOghJTA
-        KuuU4BJSQkqgASD3yNfGxvp5SM6Mx7befR/JkmwvYtxut9XlcvnQudFx5N6mavCxb+NYdTEk3Ol45Kxj
-        bUkRtPZ5ZGdJHAlwTEHApaVJ0FibIt0RGU+tJs71en23NAkay1OcLJ0iY65yaCxFuyKZE/bPFw3CDGdL
-        p1iQIxTgSTWCNscoFXBDF8X2JE7MzI7CaMSKe8Tppsj5x5ooSvCqU+4xna1JQg6nmyJ7sncubtPeZdkU
-        OnJ0uikyLlPOav/SKVnggKO1Exw7vZRlZGbvJfwOHncatb/pXFWAtaPJSExi6zK+I8pA8PB86YHEBx0s
-        M5zYTilqi73A1lqK3jvGgZitOXB/DLph2B97HEWBnp6EHc65jK7pDIxS7jGU7CPIzQgUNw6QmAnEI+BN
-        +RkaB7iNN2BpFQxpags4aWhfdA7zRAmYUGzBocdc06Zr4B5t9r1iqgrAvh4kKGItb9Zi7JoCSF47pD32
-        yb3eIRRQmjSlIDlKvkcKiH0BDanZflOUfHcUwMzN8Z8FtLti5BmzizHLCVAqMEdYlo41mmvkDMlB992S
-        YZfburmnNc3H7j1qYh/pdtL7p5lumCzR5OBlNQt87D5Cpq6I6q/sudt1AB+7P4/iTVYKPSSJj9gI5f8B
-        5qBgw4nI8G1s6qHNto7Zf1NZFJBZTIJkYGzW9J/vf4aC8sdT7JWLKP5BtSwWvzeeEuRlgdj4AAAAAElF
-        TkSuQmCC
 </value>
   </data>
   <data name="toolStripMenuItem1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -321,6 +227,33 @@
         2MFv4eyQuu06YZW+Cd/24yttbTIW7FWcZKD0a5rxIBYpbW0yLjZXhrvPFQTsQ2lrk7EY/aFTG0/u2Bcu
         cpGwoyU77IwporBLRTLUmR/Aezyt/X9cKjIGAwRfqWz/prD5naub/QD719ZcNECZzgAAAABJRU5ErkJg
         gg==
+</value>
+  </data>
+  <data name="EmployeeAddBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABoAAAAeCAYAAAAy2w7YAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAD+SURBVEhL7ZbNDYJAEIUtgRIogRIohRIsgRIswZMN2ABH
+        T8YONBw8Gz3ys75Z5zBhd8kurIYYvuRlHgkzj1kSwoZQSuUOedO27QnFNiPVIV3X7XBh0DTNk60XuL9m
+        O+QBZbRNpS8FaHpBd+gWoBq68oghpS2owpYH6Eg+RDi+M9cLqsQM0ucJYMsQ8SsouJfejcQdNAeMWYOm
+        gTH+QbApRA0hSriXvGQBQXPAGP8g2P/biG62fgVGpL/UqOtG08CYdSPrU49pwRuFgLYCkpvtIUm0oJwt
+        +QyiPx9J3CBUWwgRLwhyhRBxgvq+36LVFUKYQV/it0FjZzubz1+rSt6WEIVrFf/jKQAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
+  <data name="toolStripDropDownButton2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAD0AAAAoCAYAAABNefLBAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAIvSURBVGhD7dHJ
+        S9RxGMfx3yEIOgRBhyDoEAQRdImgQ5ARREQREQ0RRUQRUUQFFbSgT6jhQoopmpqoqVA+FS0uuTbti2uZ
+        Oi4zavstamZ+6xRPH/Hbf/EcXueH9/OxGmeC0Po3Sd7wNskbYRNsfmfzFtgK22BHj807YVevzSHYA3v7
+        bN4PB/ptPtjv8CE4MuDwUTgGJwYdPgmn3jt8Gs58cPgsnIPzQy5fgIsfXU6HjGGXCTJHXM6CbMgZdTkX
+        8iIu50PBmMeFUATF4x6XTHhcCmVQPulxBVRGPa6K+lwd87kGaqFuyud6aJj2eejnn5CIWBYOk9X0S+b8
+        FqvZaDFajcdGm9E+Ky5Wh9FpdBndc+Y9ict8WBCOy8JwQhY9TchiWPIsIUufJ2QZLH+RkBWw8mVSVsHq
+        V0lZ8zopa2EdYBTBKIJBBIMIxpDtPbZgCNndawtGkH19tmAAwfPlMODxcnzQETxe8HTB06X7e4o0WqM1
+        2tBo0GjQaNBojdZojdZojdZojdZojdZojdZojTY0GjQaYRoNGq3RGq3RGq3RGq3RGq3RGq3R/6PDP1Jp
+        s+GXIB0yhl0iuAyZIy5lQTZcGXUpB3IhL+JSPlyNeFQw5lEhFMG1cY+KoWTCo1Iog+uTHpVDBVRGPboR
+        9akKqmM+1UAt3JzyqQ7qjYZpn24Zt2cCagSGO58Cugv34P7ngB7AQ3j0JaAmaP6aohZohbZvKWqHDuhE
+        bBfE4n/TRMT6B3+XK7cJddyHAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="FinanAddBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -395,7 +328,72 @@
         a8iHx8Wzw3dX8zumW/wCJ8U2Q4u8tNwAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="toolStripDropDownButton2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABoAAAAcCAYAAAB/E6/TAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIESURBVEhLrZa9UcMwGIYZwSNkhIyQETJCRqCl4XI0tEzA
+        ZQQaalxQUnBHRccI4WiTmPf59ClxbEm2A8+dzvp5pVf6JNm+ijRNUyktPM29ehLqN2uNMfPqEwystFVq
+        s/HmUUi/Ct3OWHnzcSVdE2O/3z+4rIiky9AjydJEDOYVOfoh6LDb7d5d24M2Eylfh6osYUYFXJclioaM
+        1ibMoHY2vkgUDhktTFjAdVlMdDgcrr2cgkNSmbCANNnJ6gw8RVGlDfsK1T2KYYtIVwrf6U5SSJycUSYR
+        6Tni7WtCPn2Q1MDFZXaD4crh/dP7igGx1DPCbCavqL0Fnj+tSIXum2Hb6jB2j0pvhrA6MpTYI6VXTLS6
+        ZxJ5Ew2g7mvGyBAmq0w0Ojt5lHX0b000gOTjjaCzTwb3zIQZJKH/NCNRy+zR80d8Ar2TqPr4Qp5sBFsN
+        cM8zFAMeWrt8es5Ubt+7i4wMVtYZzCCU3f0UlxsBRq3wHFHdi9o+PE9Y/2YErum+XjC408M+1Xqakcx/
+        9HjziXxTJ8YbASuLqwDK3sQY/C/UbrQhKf9JndI0I2VnDK49ulGegePBSP2UtCES89FGOSRh1qyCcVKJ
+        tvq/jEJ4EtCGhgyfhiSKc/iDKSDZOCMvsLwuxHbM/wJGZpZJvG3C5xxUwaZaPF0w+D8H0hGRaNZLmDRN
+        U/0CqG7sR9tlDQMAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="UserMangBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAHAAAAA+CAYAAADzsp9XAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAZ9SURBVHhe7dVl
+        sxxVEIDh/EXcQ/CgwYIFCe7uTgTibljwuN24ERISIJWCqlAF34fTPd1nz0yGOzvvLrt3uXuq3vMHnuru
+        CaeOn87Wzh0Zta+kecW+9ubvLPSNtKDUwl2xb9MW5X1XbvFu7fu0JXk/xPbkLc1b5y1rtX7Z3rzlxTZ4
+        K4ptXLEvb2WrTd4qb7+2eXV1W9ZIB7St3qfFtnmfeQez7Z9Xt+ML75A2Yp088kcW3vQJu9cdze4/a8ao
+        PXB26JyZsQfPnZk95J03S5t+ft7D0gWzY49cGLro49ijoccuti75RHvceuLS0GVzYk9OnJM9NXFu3uV5
+        T0/Ke2bSvLwr8p69cl723FXzCz1/9QLthWuKvXjtQu2l66zJC7OXJy+KvXJ96IbF2qvWazdaNy3RXr85
+        7w3plqWxN6cszd6askx7+1brtrx3bl+uvevdsTx7784V2vtT8z6YujLvrrwP78776J5V2gxr5MtD3QN0
+        PALoeAjQ8AhgxAOAjkcAIx4AdLyOAAWPAhbwAKDj9Row4g0ioOJBQMWDgILXD0DFg4CCdwag4RFAx+sZ
+        oOJBQMWDgIKHAQMeBVS8EqDj1QIGvDJgxKsDvHd1lwADHgYMaBRQ8SCg4GHAgEcBBY8CCt64BUzxmgIK
+        3v8SMF2fQ8BqQMWjgAGvu4CGhwANjwBGPABYtT7bBgxo4xfQ8BCg4RHAFK8poOMhQMMjgI7XV0DHI4CO
+        hwANjwBGPADoeAQw4gHAiNcJoOBRQMHDgAlerwEjHgE0vL4BKh4EVDwIKHj9AFQ8CCh4FLCAZ4CO1zNA
+        xYOAigcBBQ8DBjwKqHgUMOBhwIDXHcCAhwEDGgVUPAgoeBgw4FFAwaOAgtdVwHT6mgKm0zfWAQWPAioe
+        Bay4f50BGh4CNDwCGPEAoOMNAZsCGt5AAwY0ClhYn+MO0PAIYIrXFNDxEKDhEUDHI4Az7wOAglcGdLw6
+        QMErAzpeLWDAOwPQ8OoAUzwHjHgA0PEIYMQDgBGvCaDiQUDFg4CCN1YAIx4BNDwC6HhDwAaAigcBBY8C
+        Cl7fARUPAioeBBQ8DBjwKKDiUcCAhwEDXv8BAxoFVDwIKHgYMOBRQMGjgILXVcCIBwDT6WsKWJi+MQ6o
+        eBQw4HUX0PAQoOERwIgHAB0PARoeASxMX0PAdPr6B2h4CNDwCGCK1xTQ8RCg4RFAxyOAgtc5YIJHAB0P
+        ARoeAYx4ANDxCGDEA4ARrxNAwaOAgocBAx4FTPGaAhbwCKDh9Q1Q8SCg4kFAwesHoOJBQMGjgIJXBnS8
+        OsCda7sEqHgQUPEgoOBhwIBHARWPAgY8DBjwBhpQ8SCg4GHAgEcBBY8CCt4QcAjYAox4ADDiAcDC+vw/
+        Awa87gIaHgI0PAIY8QCg4yFAwyOAjkcA0+nrH6DhIUDDI4ApXlNAx0OAhkcAHY8AOl4jwKr71y7gaPev
+        FjC5fxHQ8OoAUzwHjHg1gIJXBnS8OkDFKwFGPAAY8ZoAVt2/dgGr7l+7gFX3byABDY8AOl7PACvv34AB
+        Kh4EFDwKKHgUcNa0MQCoeBBQ8DBgwKOAikcBAx4GDHhdBSyszzEOKHgYMOBRQMGjgILXVcCIBwAjHgB0
+        vF4DptM3mICGhwANjwBGPADoeAjQ8MYnoOEhQMMbZEDHI4ARDwEeBoABDwMGNAqoeCXAFK8poOMhQMMj
+        gI5HAB2vEaDgUUDBw4AB7wxAw6sDTPEcMOLVAApeGdDx6gAVrwQY8QBgxGsCqHgQUPEgoOCNa8AEr2eA
+        ijfggIoHAQWPAgoeBRS8vgMqHgQUPAwY8NoGrLp/bQJW3b92AavuX1cBC+uzIWBh+oaAvQGMeAAw4gFA
+        x+s1YLo+GwMm67N/gIaHAA2PAEY8AOh4CNDwCKDjEcCIBwBnT1vTJUDDQ4CGRwBTvKaAjocADY8AOh4B
+        dLzOAAMeBgxoFFDxIGABDwA6HgGMeAAw4nUCKHgUUPAwYMCjgCleU0DBo4CKRwEDXlcAFQ8CKh4EFLx+
+        ACoeBBQ8Cih4FFDw+g6oeBBQ8DBgwKOAikcBAx4GDHhDwB4DCh4FFLz/FNDxCGBhfTYFTNbnELAE+Ofv
+        f2eC2OqYtmf96O2VNpT7ObZvY02b8vbHjrfa3OpAVVuKHdxyorqtJ7JD/9Y27xftcLntrX4st8P7VTuS
+        NlLdT95O77fYUW9Xdce83d7J7PSpv3LA8A0b2LIJ/wAgPV5q4cK/XAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="UserMangBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAdCAYAAADLnm6HAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIuSURBVEhLtZfLVcMwEEVTQjogFXAoISVkzyYlwJ5FSqCE
+        rFhTgkugBEpIAfnwrvzs+KOfD3DP8XHkeZoZSSPZWcW43W6by+Xyrnuj60Dbpmro476NfdX5kHCva8pJ
+        15MlRdC6z5S9JXEkoGMKHK4tTYLG2hTpgch4bDVxrtfri6VJ0Fie4mjpHBlzmUNjKdoNwRywX180CDOc
+        LJ1jQY6QgItqBM/so5TADV0U25M4MJUdhdmIJTfF4eacz+dva6IowKNuuWU6WZOEGA43R/bk6Jzctm1l
+        2RYGcnC4OTKuU501tZ+6JRMccLB2hn2nt7KMVParhF+hx51Gz591r0rA2lEx4hPf+hk/EWXAeVhfRiDx
+        my62GZ0aJ7XDXmBnLUm/2sfbZFbuy6AG0z4dcRQ5+nURdjjmOrqnMzBLuWUo2UcQmxkoHhygjCkgloA3
+        5Ud4OMDPeAOWdsGQpjaBo6b2QfdQJ0wfa+s2RfcyWEbaaLPvFVOVAPanQYAi1vJmLfquSYDgtVPa4z65
+        1zuEBEpFU3KSo9T3QAKxL6AhNcdvilLfPQlQuTn+M4H2VIysMacYVY6DUoI5wra0r1GtETMEB7W7LcMp
+        t/Pjnta0HHfv0SPOke4kvX+aqUGxRIODt9Ui6OPuI2Tqkqj+yl56XAfCMftXyN9spzBCgnAlZij/H2AJ
+        cjYsRKZva1MPz2zrWPxvKoscUsUESDrGZk3/+f5nyCn/eIqjchLFf1Atq9UPD5ISlqAexKcAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACcAAAAPCAYAAABnXNZuAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         wwAADsMBx2+oZAAAAa5JREFUSEvN1V1KAlEYxvFZQktwCd0FGZ4zM+o0FhUVGAgpBBVKakX0YaVQZFhQ
