--- a/UcasProjectManagement/UcasProWindowsForm/Forms/ProjectProfileForm/FrmTheDonorsAndProjectManage.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/ProjectProfileForm/FrmTheDonorsAndProjectManage.resx
@@ -126,62 +126,65 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUKSURBVEhLvZVtbFNVGMcrnwl+08SQmKhfFE384BdIJiEz
-        Q0RUlBFgIonxBf0iCUaFYFEJmBiiyyjIRoAAg22s27puo0igdAxGt3Vb263vL2wrfbm9t2v31nv7cvr3
-        uXcdFYsmmug/+eXc3HvO/znnee45R/W/qlAo7GaM9RTR/wMMRBeA6qJVuci8KpPJRKnTv1Yul/NR80zR
-        sqR8obCHPgbzhcWOrFAAvSOAPJOh57+D+spD5f60kqNF25IkxuqXzHXeBKo7XPigy4OaTg+2truxWevE
-        plYn3rjsKOP1FgcqLtigdQvKeJGxlqJtSVKOabzBCZoL4E6IaKcget80OokOTwJtRKsrgcsuoYwW4uI4
-        D5cgghYCMcsuFm1LSlMAt3+C5SgdDj5NZgLai8aKiVNAs4PHxUfQSJy1x5VxchYWsqyxaFvSTIZpnBRA
-        XmIHzV5Oz6cGPz664seuLi9q9F5s03mwhdL1Z95tc2M9panNs5iiefFRASSmsXnusZTEEE/nEUhlECTk
-        1p+UFHwy0+V45TaZwbRYAE9jyeN00bakRJppRikA+dOy43iHirpN50Y1zVB+3kjFXN8yjspL5axtHENV
-        sws9YQm2FKCfYMaDwLKi9aLiFGDQFWSxBUazzsISTSsME0PRBQwSAzKRhzET9kQOx69bsb++BU4R0IaA
-        MwFWX7ReVHg+pzE7g0ygZRoCKRzsm8LhOyEcItR9IRzoncI+0yS+Mk48xA+3ptAwyqGmNwTVTjX21p5C
-        hOpgTAInrLMXjvbzNQ8C9DuCjFsooCcwg+/J9HB/WAnwHT1/S0b7TVP4hoLI7OudhJrYTul7utGJFb8l
-        sUwvQPXhEaiPnwEtAp3j9/LnHemrSoDJmZzGNB5ggZkc7LwE09Q8TKE59IbmcXNyTsFI3JiYxXWin75Z
-        wnP4fIDHCn0Ej+vu4zljCssN01DtUONAXQPMQkHdmyisUQIEkznNTVuAhecYTlmpyG1ObKUiv0dFfot2
-        8Ab6Dauax/HaJTvWXnLhpbMurNL6sLwzjCe6o3jFKODZKxEs66ZVNIzhxe17v1aMl+RPZjQ3R33MKWRh
-        j2dgDqdxV2EB/TL3FxmKZTAwwWOrYQyqVg5PGWKovJPEyzd4qKi6K7ST+MI02VW0LcmVkAP4mT/FcNrG
-        YwedQbu6/Nip92Fbh0dZydtaN9Zpp/BzRzust+tQ2Z/AanMOFX2UltYpPNYUwBELB0li54q2JTnkAMM+
-        NsZnYQjO4tfROBqsPE6O8jgxEodmmMOxEQHq2zE0XlDTgXUMCX4Uu2xzULUJeLJjAnU0sVAyS5suW76T
-        7QIFsHjZKKWnOzCrGMrGx0c41FliqB2M4pgjjQNNvfi4eh3i5p+AcDNGLOfoL+rDqkYvrvlS8EznYeXE
-        8sNuhJPqh7kMxvg8mcaVHbxd50U1FXoznTVvUpE3XY3jhfe/xMqVz2PLxldhbfoEPtMvONRtwtomH2ot
-        cYwLOVhjYvlx7RSkPRZOCvaFRAxGMrBQMeWCKm1UgmsBMLkjWLO6AhWVG/CZuhY6sw19sTxu0c6y0eQG
-        qV8vjbdxYvmFI8spiFW374tRc0RSjP+IHEB3x44fT57HNTcHBx0JZtqtd2MFDHNZjFCAuzRuIDLv86TE
-        8itzSXY+u3sgmu6RMUfS+iWGuKze6OP0I0Jaf48ueccc0w/Fsg++m6OSYTCc7qKf5a8v/f9GKtXvGbPC
-        O9ukRfgAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABQpJREFUSEu9lW1sU1UYxyufCX7TxJCYqF8UTfzgF0gmITNDRFSUEWAiifEF/SIJ
+        RoVgUQmYGKLLKMhGgACDbazbum6jSKB0DEa3dVvbre8vbCt9ub23a/fWe/ty+ve5dx0Viyaa6D/55dzc
+        e87/Oed57jlH9b+qUCjsZoz1FNH/AwxEF4DqolW5yLwqk8lEqdO/Vi6X81HzTNGypHyhsIc+BvOFxY6s
+        UAC9I4A8k6Hnv4P6ykPl/rSSo0XbkiTG6pfMdd4Eqjtc+KDLg5pOD7a2u7FZ68SmVifeuOwo4/UWByou
+        2KB1C8p4kbGWom1JUo5pvMEJmgvgTohopyB63zQ6iQ5PAm1EqyuByy6hjBbi4jgPlyCCFgIxyy4WbUtK
+        UwC3f4LlKB0OPk1mAtqLxoqJU0Czg8fFR9BInLXHlXFyFhayrLFoW9JMhmmcFEBeYgfNXk7PpwY/Prri
+        x64uL2r0XmzTebCF0vVn3m1zYz2lqc2zmKJ58VEBJKaxee6xlMQQT+cRSGUQJOTWn5QUfDLT5XjlNpnB
+        tFgAT2PJ43TRtqREmmlGKQD507LjeIeKuk3nRjXNUH7eSMVc3zKOykvlrG0cQ1WzCz1hCbYUoJ9gxoPA
+        sqL1ouIUYNAVZLEFRrPOwhJNKwwTQ9EFDBIDMpGHMRP2RA7Hr1uxv74FThHQhoAzAVZftF5UeD6nMTuD
+        TKBlGgIpHOybwuE7IRwi1H0hHOidwj7TJL4yTjzED7em0DDKoaY3BNVONfbWnkKE6mBMAiessxeO9vM1
+        DwL0O4KMWyigJzCD78n0cH9YCfAdPX9LRvtNU/iGgsjs652EmthO6Xu60YkVvyWxTC9A9eERqI+fAS0C
+        neP38ucd6atKgMmZnMY0HmCBmRzsvATT1DxMoTn0huZxc3JOwUjcmJjFdaKfvlnCc/h8gMcKfQSP6+7j
+        OWMKyw3TUO1Q40BdA8xCQd2bKKxRAgSTOc1NW4CF5xhOWanIbU5spSK/R0V+i3bwBvoNq5rH8dolO9Ze
+        cuGlsy6s0vqwvDOMJ7qjeMUo4NkrESzrplU0jOHF7Xu/VoyX5E9mNDdHfcwpZGGPZ2AOp3FXYQH9MvcX
+        GYplMDDBY6thDKpWDk8ZYqi8k8TLN3ioqLortJP4wjTZVbQtyZWQA/iZP8Vw2sZjB51Bu7r82Kn3YVuH
+        R1nJ21o31mmn8HNHO6y361DZn8Bqcw4VfZSW1ik81hTAEQsHSWLnirYlOeQAwz42xmdhCM7i19E4Gqw8
+        To7yODESh2aYw7ERAerbMTReUNOBdQwJfhS7bHNQtQl4smMCdTSxUDJLmy5bvpPtAgWweNkopac7MKsY
+        ysbHRzjUWWKoHYzimCONA029+Lh6HeLmn4BwM0Ys5+gv6sOqRi+u+VLwTOdh5cTyw26Ek+qHuQzG+DyZ
+        xpUdvF3nRTUVejOdNW9SkTddjeOF97/EypXPY8vGV2Ft+gQ+0y841G3C2iYfai1xjAs5WGNi+XHtFKQ9
+        Fk4K9oVEDEYysFAx5YIqbVSCawEwuSNYs7oCFZUb8Jm6FjqzDX2xPG7RzrLR5AapXy+Nt3Fi+YUjyymI
+        Vbfvi1FzRFKM/4gcQHfHjh9Pnsc1NwcHHQlm2q13YwUMc1mMUIC7NG4gMu/zpMTyK3NJdj67eyCa7pEx
+        R9L6JYa4rN7o4/QjQlp/jy55xxzTD8WyD76bo5JhMJzuop/lry/9/0Yq1e8Zs8I726RF+AAAAABJRU5E
+        rkJggg==
 </value>
   </data>
   <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYXSURBVEhLjVZ7TFN3GGU6ZfhEfMXH1Ck+ksU9zEzUGRET
-        39ON4RYVM50654upMdkw6nwrcVOW+MoA33Cp4gsotFJAS0ELhdIWSktbSlsqIC+xgjLRnZ1b+WNMNPuS
-        L7m9t79zvu9837mtT2exY8eOCcp7uVCp1a3p6ekeOTNFLvcI0hSPIAieeOaZmOi28+fPt0ml0hntx/5f
-        REZGTo+Ojo63VrrgaKiD2eWCwWZFfnExlJo8yJV3cVOWhpPnYpF+Jwv5hYXYEB4+p/34W+OdiIiI/gqF
-        Qp2SmYG8Ii1MTgeKCa41m6A26KHS5CNdlQ0pn5+Nj0NaRgbE0PLZrl27lrTjvDkSJJKqpNtyxF1LhLqo
-        iNU7obOYUWAsYQcG5BYWIDM3BxkkuXLrJmRZmV6Cp23Pkc+CSLK8Harz+DM2NlWSdAvxiYneDszswFhu
-        g8lezrSj2GqBlmQieZJcBkW20kvQxmzF39DodNizf//qdrjX4/eoqA1ShQIXBMGrrcVRAYPJBC311xmN
-        zBJoDDpo9Hpk5eTg7r17aHnRhkdPW9D07CkeNjYiS6XCnn37trZDdgy2OPFmqhSXr15BXl4eLKzYQGm0
-        rFin10FnMEDHz7oSkbCEW3YfqYp0iGeuJSchgdKeF+IRnZDwODw83LcdtmNclEjKE27cQP79+zCXlKCU
-        AzSxAxNBTQQ1m80wW8pgZGdF4lzy1MjMUSE1Q4Hr0hQk3LwBIUnwvJHgZGys5Cq/VEAJyrRa6CiDJjsb
-        BfSFllukE1NbCAO7KaJUGn4nNz8PWbm5JMrxrrGQlvpmgr2RkSslt28jjxWZeKBYqUQxdS3UaFBMmWyU
-        zcxhWkylsFqtKLPZUFJmbh++FjncNBmN2SlB9ew58m2Tp6gl2cpmPas2ymQoYuawuubkFBR8two3zsbC
-        WV2NUi6BiYM3WywopWQGekVH0iKSie5/jaBk/oLbrhVrcGHMuJcrgoJemlmxTSZHLrfKcvw4ni9dDlf4
-        dkRPmgxp3GXYubpGdmTmLMpoRhPX2VxRAau7Eunq+x0JlEHBuywLQlC9cTs8WyJwbNAQbAmeCT2dWkbw
-        qpmzUL71F9RdTkTNup+QNHcB9dfBTW+4COqueoCq+jo4aqrhbmyAurCwI8Gl3gHbyr9aCkfIMrhWb4Rn
-        03as9w/AykmfomLhIljWboL9wFG4t0XgMYs4NWcBrl+RwCFuVKnRu842mvJBXR0e/dWKQhLMmzevo0RH
-        /Ptvss77EtaFobAvXQXr8u9xYuQYGEKXwbp5O+yrfkRVaBiOzQjG0aORsHIGztJSOCiPiy9GN6uvftSI
-        Frq6UwIxdnfzXVc2NRjGWfNhpGQuAuoWf4PiRaFwkzhq2gwc/HU3ymlCF9eznD5wcosqqbu7psZL0CoS
-        WCydE4ixY+SoOOWkKdB89jnUU4OQP42zmBaMn8dOwKG9e1HB7SrPugMz/WGjDyq4RU6nEy7O4WFTE56/
-        jcCxefPCnRM/wvVBw3F3RCAUI8cik5nNXN+7DyLDwtBIg9XQB25mDTenlsANDfV49MSDhuZmvBAJrNbX
-        CUxhYUv0XyxG+vDRSB04HMkDh0HRMwDJ/QYjmYSqIaNwrHdfnFq9GhWs3MH3k52vECdJKitfSVTf/ITw
-        JLD9hyAzJORj1ey5kA0ZgVsETCO4vIc/okaPw7VeAZD5D4J08HBk8f5Bny44t3MnajnUSsrzgPJUifqz
-        i4YWccQiga0jgX7a9N9yCS7tOxAqApWR5NjETxB15jSur/kBch8fqPoOQMbg93Gvix8uBY6DngZ7XF+P
-        +tpaND5u4iv7KRpbn3VOENLNd20NpXlIgHpWe2BUYE4a7Y76Bjxn27pDR+AeMBQu/4Go6dkPqaHforql
-        2QvWWXDonsDAwI4zmN2j1xp8MB77uvtd8PHzGxZz+nSlJCamUoiNsR8XBPuBoDnOpq7v4Y8JEx5uOHzY
-        dvHSpQohPt4eJ8Tb+S/Dm0KiYL+lUNSeOHXKRMghr5D5Y8/sJl586Of3tZ+Pz1Be9mD2Ee8xujLF64Dx
-        3buH+vr6BvK6J7M7Uwzx/L9TDPEMMXze/QcZ5A7Kf+PrCwAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABhdJREFUSEuNVntMU3cYZTpl+ER8xcfUKT6SxT3MTNQZERPf043hFhUznTrni6kx
+        2TDqfCtxU5b4ygDfcKniCyi0UkBLQQuF0hZKS1tKWyogL7GCMtGdnVv5Y0w0+5Ivub23v3O+73zfua1P
+        Z7Fjx44Jynu5UKnVrenp6R45M0Uu9wjSFI8gCJ545pmY6Lbz58+3SaXSGe3H/l9ERkZOj46OjrdWuuBo
+        qIPZ5YLBZkV+cTGUmjzIlXdxU5aGk+dikX4nC/mFhdgQHj6n/fhb452IiIj+CoVCnZKZgbwiLUxOB4oJ
+        rjWboDboodLkI12VDSmfn42PQ1pGBsTQ8tmuXbuWtOO8ORIkkqqk23LEXUuEuqiI1Tuhs5hRYCxhBwbk
+        FhYgMzcHGSS5cusmZFmZXoKnbc+Rz4JIsrwdqvP4MzY2VZJ0C/GJid4OzOzAWG6DyV7OtKPYaoGWZCJ5
+        klwGRbbSS9DGbMXf0Oh02LN//+p2uNfj96ioDVKFAhcEwautxVEBg8kELfXXGY3MEmgMOmj0emTl5ODu
+        vXtoedGGR09b0PTsKR42NiJLpcKeffu2tkN2DLY48WaqFJevXkFeXh4srNhAabSsWKfXQWcwQMfPuhKR
+        sIRbdh+pinSIZ64lJyGB0p4X4hGdkPA4PDzctx22Y1yUSMoTbtxA/v37MJeUoJQDNLEDE0FNBDWbzTBb
+        ymBkZ0XiXPLUyMxRITVDgevSFCTcvAEhSfC8keBkbKzkKr9UQAnKtFroKIMmOxsF9IWWW6QTU1sIA7sp
+        olQafic3Pw9ZubkkyvGusZCW+maCvZGRKyW3byOPFZl4oFipRDF1LdRoUEyZbJTNzGFaTKWwWq0os9lQ
+        UmZuH74WOdw0GY3ZKUH17DnybZOnqCXZymY9qzbKZChi5rC65uQUFHy3CjfOxsJZXY1SLoGJgzdbLCil
+        ZAZ6RUfSIpKJ7n+NoGT+gtuuFWtwYcy4lyuCgl6aWbFNJkcut8py/DieL10OV/h2RE+aDGncZdi5ukZ2
+        ZOYsymhGE9fZXFEBq7sS6er7HQmUQcG7LAtCUL1xOzxbInBs0BBsCZ4JPZ1aRvCqmbNQvvUX1F1ORM26
+        n5A0dwH118FNb7gI6q56gKr6OjhqquFubIC6sLAjwaXeAdvKv1oKR8gyuFZvhGfTdqz3D8DKSZ+iYuEi
+        WNZugv3AUbi3ReAxizg1ZwGuX5HAIW5UqdG7zjaa8kFdHR791YpCEsybN6+jREf8+2+yzvsS1oWhsC9d
+        Bevy73Fi5BgYQpfBunk77Kt+RFVoGI7NCMbRo5GwcgbO0lI4KI+LL0Y3q69+1IgWurpTAjF2d/NdVzY1
+        GMZZ82GkZC4C6hZ/g+JFoXCTOGraDBz8dTfKaUIX17OcPnByiyqpu7umxkvQKhJYLJ0TiLFj5Kg45aQp
+        0Hz2OdRTg5A/jbOYFoyfx07Aob17UcHtKs+6AzP9YaMPKrhFTqcTLs7hYVMTnr+NwLF588KdEz/C9UHD
+        cXdEIBQjxyKTmc1c37sPIsPC0EiD1dAHbmYNN6eWwA0N9Xj0xIOG5ma8EAms1tcJTGFhS/RfLEb68NFI
+        HTgcyQOHQdEzAMn9BiOZhKoho3Csd1+cWr0aFazcwfeTna8QJ0kqK19JVN/8hPAksP2HIDMk5GPV7LmQ
+        DRmBWwRMI7i8hz+iRo/DtV4BkPkPgnTwcGTx/kGfLji3cydqOdRKyvOA8lSJ+rOLhhZxxCKBrSOBftr0
+        33IJLu07ECoClZHk2MRPEHXmNK6v+QFyHx+o+g5AxuD3ca+LHy4FjoOeBntcX4/62lo0Pm7iK/spGluf
+        dU4Q0s13bQ2leUiAelZ7YFRgThrtjvoGPGfbukNH4B4wFC7/gajp2Q+pod+iuqXZC9ZZcOiewMDAjjOY
+        3aPXGnwwHvu6+13w8fMbFnP6dKUkJqZSiI2xHxcE+4GgOc6mru/hjwkTHm44fNh28dKlCiE+3h4nxNv5
+        L8ObQqJgv6VQ1J44dcpEyCGvkPljz+wmXnzo5/e1n4/PUF72YPYR7zG6MsXrgPHdu4f6+voG8ronsztT
+        DPH8v1MM8QwxfN79BxnkDsp/4+sLAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>332, 56</value>
+  </metadata>
 </root>
